[gd_scene load_steps=22 format=3 uid="uid://dh01oxe50pj27"]

[ext_resource type="Theme" uid="uid://u0v4125khbnj" path="res://media/launcher_theme.tres" id="1_g7tpw"]
[ext_resource type="Script" uid="uid://c6h4el3fhjqwj" path="res://scenes/app/app.gd" id="1_ov0up"]
[ext_resource type="Texture2D" uid="uid://dt4qwfs1yjhx3" path="res://media/gradient_bg.tres" id="3_0g1gi"]
[ext_resource type="Shader" uid="uid://titrovgmum1s" path="res://scenes/shaders/blur.gdshader" id="3_n8sr3"]
[ext_resource type="Shader" uid="uid://dvxdyadfbmji" path="res://scenes/shaders/texture_blend.gdshader" id="4_7um57"]
[ext_resource type="Script" uid="uid://be3w65oqgu04l" path="res://scenes/app/version.gd" id="4_df76v"]
[ext_resource type="Texture2D" uid="uid://dph8j6sb0fjbv" path="res://media/bg_test.png" id="5_o0uvn"]
[ext_resource type="Script" uid="uid://75tagtvu2wvd" path="res://scenes/app/bg_blend.gd" id="6_2ddv3"]
[ext_resource type="PackedScene" uid="uid://c0ya18uwem535" path="res://scenes/carousel/carousel.tscn" id="8_gjd2l"]
[ext_resource type="Texture2D" uid="uid://bkcdlq5qkm8x6" path="res://media/qr-example.png" id="9_8qy26"]
[ext_resource type="PackedScene" uid="uid://byc63tttfiubh" path="res://scenes/attributes/attribute.tscn" id="10_ctef4"]
[ext_resource type="PackedScene" uid="uid://ciw7qtcs6fbw0" path="res://scenes/attributes/filter.tscn" id="10_qt8c2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_psg6v"]
shader = ExtResource("4_7um57")
shader_parameter/texture_1 = ExtResource("3_0g1gi")
shader_parameter/texture_2 = ExtResource("5_o0uvn")
shader_parameter/mix_value = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qsltc"]
shader = ExtResource("3_n8sr3")
shader_parameter/lod = 4.731

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wttou"]

[sub_resource type="Animation" id="Animation_3bf3j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_7ib0s"]
resource_name = "default"
length = 20.0
loop_mode = 1
step = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5, 10, 15, 20),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.466181, 0.466181, 0.466181, 1), Color(1, 1, 1, 1), Color(0, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_omhbt"]
_data = {
&"RESET": SubResource("Animation_3bf3j"),
&"default": SubResource("Animation_7ib0s")
}

[sub_resource type="Animation" id="Animation_ntcak"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ScreensaverTitle:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_r4pf5"]
resource_name = "default"
length = 10.0
loop_mode = 1
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ScreensaverTitle:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 4, 6, 8, 10),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(518, -395), Vector2(503, 380), Vector2(-479, 373), Vector2(-481, -392), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_avlm0"]
_data = {
&"RESET": SubResource("Animation_ntcak"),
&"default": SubResource("Animation_r4pf5")
}

[node name="ArcadeLauncher" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_g7tpw")
script = ExtResource("1_ov0up")
default_bg = ExtResource("3_0g1gi")
metadata/_edit_vertical_guides_ = [960.0]

[node name="Background" type="TextureRect" parent="."]
unique_name_in_owner = true
self_modulate = Color(0.201527, 0.201527, 0.201527, 1)
material = SubResource("ShaderMaterial_psg6v")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_0g1gi")
script = ExtResource("6_2ddv3")
metadata/_edit_lock_ = true

[node name="GradientBG" type="TextureRect" parent="Background"]
self_modulate = Color(0.215902, 0.215902, 0.215902, 1)
material = SubResource("ShaderMaterial_qsltc")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_0g1gi")
metadata/_edit_lock_ = true

[node name="Darken" type="ColorRect" parent="Background"]
self_modulate = Color(0, 0, 0, 0.678431)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="Carousel" parent="." node_paths=PackedStringArray("launcher") instance=ExtResource("8_gjd2l")]
unique_name_in_owner = true
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 965.0
offset_top = 361.0
offset_right = 965.0
offset_bottom = 361.0
grow_horizontal = 1
grow_vertical = 1
launcher = NodePath("..")

[node name="Info" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 354.0
offset_top = -389.0
offset_right = -356.0
offset_bottom = 1294.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="InfoVBox" type="VBoxContainer" parent="Info"]
clip_contents = true
custom_minimum_size = Vector2(1200, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="Title" type="RichTextLabel" parent="Info/InfoVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/normal_font_size = 42
bbcode_enabled = true
text = "[center]Game name[/center]"
fit_content = true
scroll_active = false

[node name="Spacer" type="Control" parent="Info/InfoVBox"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2

[node name="DescriptionHBox" type="HBoxContainer" parent="Info/InfoVBox"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Description" type="RichTextLabel" parent="Info/InfoVBox/DescriptionHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/line_separation = -4
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "Lorem ipsum dolor sit amet, 
consectetur adipiscing elit, sed do eiusmod 
tempor incididunt ut labore et dolore magna aliqua. 

Ut enim ad minim veniam, quis nostrud 
exercitation ullamco
 laboris nisi ut aliquip ex ea commodo consequat. 
Duis aute irure dolor in reprehenderit in 
voluptate velit esse cillum dolore eu fugiat nulla pariatur.
"
fit_content = true
scroll_active = false
autowrap_mode = 0
shortcut_keys_enabled = false

[node name="QR" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 75.0
offset_top = 840.0
offset_right = 239.0
offset_bottom = 1004.0
texture = ExtResource("9_8qy26")
expand_mode = 1

[node name="NoGameFound" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 22
text = "No games found"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VersionBtn" type="LinkButton" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1900.0
offset_top = -50.0
offset_right = -1849.0
offset_bottom = -19.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 22
text = "1.1"
underline = 1
uri = "https://github.com/naturally-intelligent/arcade-game-launcher"
script = ExtResource("4_df76v")

[node name="Filters" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 7.0
offset_bottom = 39.0
grow_horizontal = 2
alignment = 1

[node name="all" parent="Filters" instance=ExtResource("10_qt8c2")]
layout_mode = 2
text = "All  "
button_text = "All"
icon_index = 30
metadata/_edit_horizontal_guides_ = [60.0]

[node name="recent" parent="Filters" instance=ExtResource("10_qt8c2")]
layout_mode = 2
text = "Recently Added  "
button_text = "Recently Added"
icon_index = 32
metadata/_edit_horizontal_guides_ = [60.0]

[node name="most" parent="Filters" instance=ExtResource("10_qt8c2")]
visible = false
layout_mode = 2
text = "Most Played  "
button_text = "Most Played"
icon_index = 27
metadata/_edit_horizontal_guides_ = [60.0]

[node name="singleplayer" parent="Filters" instance=ExtResource("10_qt8c2")]
layout_mode = 2
icon_index = 73
metadata/_edit_horizontal_guides_ = [60.0]

[node name="multiplayer" parent="Filters" instance=ExtResource("10_qt8c2")]
layout_mode = 2
text = "Two-Player  "
button_text = "Two-Player"
icon_index = 98
metadata/_edit_horizontal_guides_ = [60.0]

[node name="pvp" parent="Filters" instance=ExtResource("10_qt8c2")]
layout_mode = 2
text = "Competitive  "
button_text = "Competitive"
icon_index = 25
metadata/_edit_horizontal_guides_ = [60.0]

[node name="coop" parent="Filters" instance=ExtResource("10_qt8c2")]
layout_mode = 2
text = "Cooperative  "
button_text = "Cooperative"
icon_index = 15
metadata/_edit_horizontal_guides_ = [60.0]

[node name="trackball" parent="Filters" instance=ExtResource("10_qt8c2")]
layout_mode = 2
text = "Trackball  "
button_text = "Trackball"
icon_index = 43
metadata/_edit_horizontal_guides_ = [60.0]

[node name="leaderboards" parent="Filters" instance=ExtResource("10_qt8c2")]
layout_mode = 2
text = "Leaderboards  "
button_text = "Leaderboards"
icon_index = 3
metadata/_edit_horizontal_guides_ = [60.0]

[node name="random" parent="Filters" instance=ExtResource("10_qt8c2")]
visible = false
layout_mode = 2
text = "Random  "
button_text = "Random"
icon_index = 38
metadata/_edit_horizontal_guides_ = [60.0]

[node name="AttributesAlign" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -456.0
offset_top = 364.0
offset_right = -41.0
offset_bottom = -23.0
grow_horizontal = 0
grow_vertical = 2
alignment = 2

[node name="Attributes" type="VBoxContainer" parent="AttributesAlign"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 0
alignment = 2

[node name="singleplayer" parent="AttributesAlign/Attributes" instance=ExtResource("10_ctef4")]
layout_mode = 2
text = "Single Player"
icon = 73

[node name="multiplayer" parent="AttributesAlign/Attributes" instance=ExtResource("10_ctef4")]
layout_mode = 2
text = "Two Players"
icon = 98

[node name="pvp" parent="AttributesAlign/Attributes" instance=ExtResource("10_ctef4")]
layout_mode = 2
text = "Competitive"
icon = 25

[node name="coop" parent="AttributesAlign/Attributes" instance=ExtResource("10_ctef4")]
layout_mode = 2
text = "Cooperative"
icon = 15

[node name="trackball" parent="AttributesAlign/Attributes" instance=ExtResource("10_ctef4")]
layout_mode = 2
text = "Trackball"
icon = 43

[node name="leaderboards" parent="AttributesAlign/Attributes" instance=ExtResource("10_ctef4")]
layout_mode = 2
text = "Leaderboards"
icon = 3

[node name="globalgamejam" parent="AttributesAlign/Attributes" instance=ExtResource("10_ctef4")]
layout_mode = 2
text = "Global Game Jam Entry"
icon = 16

[node name="arcadejam" parent="AttributesAlign/Attributes" instance=ExtResource("10_ctef4")]
layout_mode = 2
text = "Arcade Jam Entry"
icon = 81

[node name="albertajam" parent="AttributesAlign/Attributes" instance=ExtResource("10_ctef4")]
layout_mode = 2
text = "Alberta Jam Entry"
icon = 99

[node name="construction" parent="AttributesAlign/Attributes" instance=ExtResource("10_ctef4")]
visible = false
layout_mode = 2
text = "Unfinished"
icon = 102

[node name="crashy" parent="AttributesAlign/Attributes" instance=ExtResource("10_ctef4")]
visible = false
layout_mode = 2
text = "Crashy"
icon = 76

[node name="Overlay" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="Loading" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Labels" type="VBoxContainer" parent="Loading"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="LoadingLabel" type="Label" parent="Loading/Labels"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 60
text = "Loading"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameName" type="Label" parent="Loading/Labels"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 40
text = "Game Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LeftButton" type="Button" parent="."]
layout_mode = 0
offset_right = 100.0
offset_bottom = 1080.0
focus_mode = 1
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_wttou")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_wttou")
theme_override_styles/hover = SubResource("StyleBoxEmpty_wttou")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_wttou")
theme_override_styles/normal = SubResource("StyleBoxEmpty_wttou")
metadata/_edit_lock_ = true

[node name="RightButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1820.0
offset_right = 1920.0
offset_bottom = 1080.0
focus_mode = 1
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_wttou")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_wttou")
theme_override_styles/hover = SubResource("StyleBoxEmpty_wttou")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_wttou")
theme_override_styles/normal = SubResource("StyleBoxEmpty_wttou")
metadata/_edit_lock_ = true

[node name="Screensaver" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="ScreensaverImage" type="TextureRect" parent="Screensaver"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_o0uvn")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Screensaver/ScreensaverImage"]
libraries = {
&"": SubResource("AnimationLibrary_omhbt")
}
autoplay = "default"
speed_scale = 0.22

[node name="ScreensaverTitle" type="Label" parent="Screensaver"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 19200.0
offset_bottom = 10800.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 80
text = "GAME LAUNCHER"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Screensaver/ScreensaverTitle"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_avlm0")
}
autoplay = "default"
speed_scale = 0.11

[node name="Notices" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 465.0
offset_top = 831.0
offset_right = 1442.0
offset_bottom = 1064.0
theme_override_constants/separation = 3
alignment = 2

[node name="Timers" type="Node" parent="."]

[node name="PIDTimer" type="Timer" parent="Timers"]

[node name="ScreensaverTimer" type="Timer" parent="Timers"]
wait_time = 300.0
one_shot = true

[node name="AutoscrollTimer" type="Timer" parent="Timers"]
wait_time = 5.0

[node name="AutoscrollStartTimer" type="Timer" parent="Timers"]
wait_time = 45.0
one_shot = true

[node name="AllowGameLaunchTimer" type="Timer" parent="Timers"]
one_shot = true
autostart = true

[connection signal="button_up" from="LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="mouse_entered" from="LeftButton" to="." method="_on_left_mouse_entered"]
[connection signal="button_up" from="RightButton" to="." method="_on_right_button_pressed"]
[connection signal="mouse_entered" from="RightButton" to="." method="_on_right_mouse_entered"]
[connection signal="timeout" from="Timers/ScreensaverTimer" to="." method="_on_screensaver_timer"]
[connection signal="timeout" from="Timers/AutoscrollTimer" to="." method="_on_autoscroll_timer"]
[connection signal="timeout" from="Timers/AutoscrollStartTimer" to="." method="_on_autoscroll_start_timer"]
[connection signal="timeout" from="Timers/AllowGameLaunchTimer" to="." method="_on_allow_game_launch_timer"]
